<resources>
    <string name="app_name">UniDorm</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Войти</string>
    <string name="GuestIn">Я гость</string>
    <string name="Notification">Уведомления</string>
    <string name="accountInfoText">Личный кабинет</string>
    <string name="shopText">Магазин</string>
    <string name="cleaningQueueText">Дежурство</string>
    <string name="infoHelpText">Справка</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="map">Карта</string>


</resources>